fixed header z-index issue

--- a/client/src/components/Slot/Slot.css
+++ b/client/src/components/Slot/Slot.css
@@ -71,6 +71,7 @@
 .fixed-header-1 {
   position: sticky;
   top: 0;
+  z-index: 31;
 }
 
 .fixed-header-1::before {
